# nanobubbleeval

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
annotation/packet/: annotation_guide.md  instructions.md
archive/: legacy_main.tex  legacy_summary_report.tex
baselines/encoder/: biobert-squadv2_predictions.csv
baselines/llm/: qwen25-7b-instruct-quotecheck_predictions.csv
configs/: extraction_schema.json
data/splits/: leakage_report.md
dataset_release/: MIRROR_PROCEDURE.md  README.md
dataset_release/gold_hard/: iaa_subset.csv
dataset_release/metadata/: croissant.json  data_quality_report.md
dataset_release/predictions/: qwen25-7b-instruct.csv  regex-v1.csv
dataset_release/splits/: slice_summary.md
docs/: clinical_trials_summary.md  collection_log.md  corpus_statistics.md  dataset_characterization.md  query_families.md  review_summary.md
metadata/: croissant.json
paper/: checklist.tex  main.tex  ref.bib
paper/notes/: TBD_log.md
results/metrics/: biobert-squadv2.csv  regex-v1.csv  (+2 more)
scripts/: 01_build_iaa_subset.py  02_build_splits.py  03_reconcile.py  04_evaluate.py  05_annotate.py  README.md
tests/: conftest.py  test_annotate.py  test_baselines.py  test_encoder_baseline.py  test_evaluator.py  test_harvest.py  test_llm_baseline.py  test_normalizer.py  test_paths.py  test_reconciler.py
verification/: abstract_mismatches.txt  gold_hard_abstract_crosscheck.csv  gold_hard_containment_after_merge.csv  gold_hard_containment_before_merge.csv  gold_hard_identifier_parse.csv  gold_hard_refetch_log.csv  summary.json
(+29 files in other folders)
